[package]
name = "atpp"
version = "1.6.6"
authors = ["XuPengJie <PengJieXu@secken.com>"]
description = "atpp protocol"
documentation = "https://github.com/gitxpj/rust-atpp"
repository = "https://github.com/gitxpj/rust-atpp"
keywords = ["atpp", "tcp", "protocol"]
license = "BSD-3-Clause"


[dependencies]
byteorder = "*"
